# matrix_gf2

./: CMakeLists.txt  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEST_GUIDE.md  matrix_gf2
Tratata/: gf2.cpp  gf2.h  matrix_gf2.cpp  matrix_gf2.hpp  test_matrix_gf2_new.cpp
_codeql_build_dir/: example_basic  example_educational  example_gauss  example_inverse  test_matrix_gf2
examples/: example_basic.cpp
include/matrix_gf2/: gf2.h  gf_element.hpp  matrix.hpp  matrix_gf2.hpp
src/: gf2.cpp  gf_element.cpp  matrix.cpp
tests/: test_matrix_gf2.cpp  test_matrix_gf2_new.cpp
